--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
-    "@sveltejs/kit": "next",
+    "@sveltejs/kit": "1.0.0-next.163",
     "autoprefixer": "^10.3.1",
     "cssnano": "^5.0.6",
     "postcss": "^8.3.5",
